Security: Remove hardcoded API keys, domains, and credentials
- Replace hardcoded domains with environment variables
- Remove exposed N8N API keys and admin passwords
- Update docker-compose to use environment variable substitution
- Add SERVER_URL and MCP_SERVER_DOMAIN environment variables
- Ensure all sensitive data is configurable via .env

🔒 Security hardening for public repository

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,11 @@
 PORT=3007
 HOST=0.0.0.0
 NODE_ENV=production
+SERVER_URL=https://your-mcp-server-domain.com
+MCP_SERVER_DOMAIN=your-mcp-server-domain.com
 
 # CORS Configuration
-CORS_ORIGIN=https://claude.ai,https://your-domain.com
+CORS_ORIGIN=https://claude.ai,https://your-mcp-server-domain.com
 
 # N8N Instance Configuration (Fallback - Users can override via login form)
 N8N_HOST=https://your-n8n-instance.com
